objects/FormulaTest2__c.object
<CustomObject>
    <fields>
        <fullName>CostPrice__c</fullName>
        <label>CostPrice</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>SellingPrice__c  -  CostPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SellingPrice__c</fullName>
        <label>SellingPrice</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>FormulaTest2</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SellingPrice__c</columns>
        <columns>CostPrice__c</columns>
        <columns>Profit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>FormulaTest2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FormulaTest2</pluralLabel>
    <recordTypes>
        <fullName>abc</fullName>
        <active>true</active>
        <label>abc</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>